# agi-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 511a65555f71_initial_schema.py  7dffc5a8e64c_add_campaign_metadata_json.py  86cc88b95e20_add_social_channel_external_link.py  f4deed527dc6_add_blog_writer_module.py  f6ddf5f364f6_add_ai_settings_table.py  f977e27daa7d_add_blog_writer_articles_media_file_id.py
apps/api/app/: main.py
apps/api/app/api/v1/: ai.py  auth.py  blog_writer_articles.py  blog_writer_sites.py  buffer.py  campaigns.py  media.py  publications.py  settings.py  users.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: base.py  seed.py  session.py
apps/api/app/integrations/buffer/: __init__.py  client.py  exceptions.py  mock_client.py  prod_client.py  service.py
apps/api/app/integrations/openai/: client.py  (+1 more)
apps/api/app/models/: __init__.py  administrator.py  ai_settings.py  audit.py  blog_writer.py  buffer.py  campaign.py  media.py  publication.py  user.py
apps/api/app/schemas/: schemas.py
apps/api/app/services/: ai_settings_service.py  blog_writer_article_service.py  blog_writer_publication_service.py  campaign_resolver.py  media_service.py  rate_limiter.py
apps/api/app/tasks/: blog_writer.py  cleanup.py  media.py  publication.py  sync.py
apps/api/app/utils/: create_admin.py
apps/api/app/workers/: celery_app.py
(+139 files in other folders)
