[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "social-publisher-api"
version = "0.1.0"
description = "FastAPI backend for Multi-Tenant Social Publishing Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "sqlalchemy[asyncio]>=2.0.28",
    "psycopg[binary]>=3.1.18",
    "alembic>=1.13.1",
    "pydantic[email]>=2.6.4",
    "celery>=5.3.6",
    "redis>=5.0.3",
    "httpx>=0.27.0",
    "cryptography>=42.0.5",
    "argon2-cffi>=23.1.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.3.3",
    "mypy>=1.9.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "RUF"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
